# fnote

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.build.yml  ci.fmt.yml  ci.lint.yml
src/: cli.rs  convert.rs  error.rs  lib.rs  main.rs  parse.rs
src/commands/: freq.rs  midi.rs  mod.rs  note.rs
