[package]
name = "fnote"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Maxwell"]
description = "CLI tool for converting frequencies and musical notes"

[dependencies]
async-trait = "0.1.83"
regex = "1.11.1"
structopt = "0.3.26"
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full"] }
